# birthday-bot

./: .gitignore  Cargo.toml  README.md  sqlx-data.json
src/: bot.rs  config.rs  database.rs  main.rs
src/bot/: checks.rs  commands.rs  events.rs  mod.rs  utils.rs
src/bot/commands/: general.rs  owner.rs
